alignment length